--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -481,6 +481,10 @@ h1, h2, h3, h4, h5, h6 {
   animation: up-down 2s ease-in-out infinite alternate-reverse both;
 }
 
+#ImagemPrincipal{
+  border:solid red !important;
+}
+
 @media (max-width: 1199px) {
   #ImagemPrincipal {
     max-width: 130%;
